Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15879

Explorer - Application error whilst trying to list the contents of a folder

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS
    • None

    Description

      0.4.12-dev-906-gdf424955e0-bootcd (locally compiled) installed in real hardware.

      With a CD in drive E:, navigate to 'Financial software'. Explorer then fails to fully show all the file icons and reports an error.
      Full path is not shown in Explorer Address bar.
      This is the full address "D:\Office Apps\Financial software" (from Win7 Explorer).

      This only happened with theĀ Financial software folder

      explorer-crash.png shows the error message, the part row of missing icons and the part path in the Explorer Address bar.
      explorer-crash[2].png shows what happened when the MWsnap (screenshot app) window was closed (may be unrelated).
      Explorer-debug.log was captured on another try (after a reboot) to list the contents of the Financial software folder.
      Appcrash_2019-03-22_17-55-13-Explorer.txt self generated crash report.
      folder.png shows folder info viewed in Win7.

      Could be related to: CORE-14179 Explorer crashes in comctl32

      Edit:

      In explorer-crash.png the window outline is where MWsnap window was.

      Attachments

        1. Appcrash_2019-03-22_17-55-13-Explorer.txt
          18 kB
        2. Appcrash_2080-01-04_08-15-20.txt
          18 kB
        3. CORE-15879.patch
          0.5 kB
        4. explorer-crash.png
          explorer-crash.png
          60 kB
        5. explorer-crash[2].png
          explorer-crash[2].png
          40 kB
        6. Explorer-debug.log
          61 kB
        7. folder.png
          folder.png
          85 kB
        8. folder-Financial software.png
          folder-Financial software.png
          76 kB
        9. HomeBank-4.5-win32.exe
          8 kB

        Issue Links

          Activity

            People

              DougLyons DougLyons
              oldman oldman
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: