Fix ICO_ExtractIconExW causing explorer to crash when trying  to display icon for bad EXE PE header.

See CORE-15879

 Co-authored-by: Thomas Faber <thomas.faber@reactos.org>